--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campos en Mantenimiento</title>
+    <title>En mantenimiento</title>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Raley&display=swap" rel="stylesheet">
     <style>
@@ -57,7 +57,7 @@
             letter-spacing: 3px;
             text-align: center;
             color: #FC4B08; /* Color inicial del texto */
-            // transition: color 0.5s ease-in-out; 
+            transition: color 0.5s ease-in-out; 
         }
     </style>
 <script>
