--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     </style>
 <script>
     function cambiarColor() {
-        const colores = ["#936078", "#FC4B08", "#e74a94", "#1EDAE8"];
+        const colores = ["#FC1E08", "#FC7408", "#FC084E"];
         const colorAleatorio = colores[Math.floor(Math.random() * colores.length)];
         document.getElementById("miTexto").style.color = colorAleatorio;
     }
     // Cambia el color cada 2 segundos
-    //setInterval(cambiarColor, 2000);
+    setInterval(cambiarColor, 2000);
 </script>
 
 </head>
