--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
 <script>
     function cambiarColor() {
-        const colores = ["#FC1E08", "#FC7408", "#FC084E"];
+        const colores = ["#FC1E08", "#FC084E"];
         const colorAleatorio = colores[Math.floor(Math.random() * colores.length)];
         document.getElementById("miTexto").style.color = colorAleatorio;
     }
