--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             font-size: 18px;
         }
         a:hover {
-            color: #E94E1E; 
+            color: #08DDFC; 
         }
          .phone {
             color: #5EC3DC; /* Color del número de teléfono */
